# zmq-ch4

./: .gitignore  README.md  pyproject.toml
lazy_pirate/: README.md  client.py  run.py  server.py
paranoid_pirate/: README.md  config.py  queue.py  run.py  worker.py
simple_pirate/: README.md  queue.py  run.py  worker.py
utils/: logger.py  print_seq.py
